# 3s-cadsus-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/cadsus_client/: __init__.py  auth.py  cache.py  client.py  config.py  debug.py  exceptions.py  soap.py
src/three_s_cadsus_client/: __init__.py  client.py  config.py  exceptions.py  soap.py
tests/: test_client.py
