[build-system]
requires = ["setuptools>=68", "wheel>=0.40"]
build-backend = "setuptools.build_meta"

[project]
name = "3s-cadsus-client"
version = "0.1.7"
description = "Cliente async para integracao de projetos Django com a API do CADSUS-MS."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "3S" }
]
dependencies = [
  "httpx>=0.28,<1.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["cadsus", "django", "ministerio-da-saude", "sus", "async"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
